# vlad_parser

./: .gitignore  LICENSE  README.md  TODO.md  build_sub_parser.sh  requirements.txt  setup.cfg  setup.py  tox.ini  vscode.env
.github/workflows/: release.yml  test.yml
grammar/: VLADLexBasic.g4  VLADLexer.g4  VLADParser.g4  vladlexbasic.g4  vladlexer.g4  vladparser.g4
grammar/.antlr/: vladlexbasic.java  vladlexer.interp  vladlexer.java  vladlexer.tokens  vladparser.interp  vladparser.java  vladparser.tokens
libs/vlad-parser/: .project-import-section.toml  README.md  pyproject.toml
libs/vlad-parser/assets/: test.vlad
libs/vlad-parser/src/vlad/parser/: grammar_factory.py  matchers.py  parser.py  translator.py
libs/vlad-parser/src/vlad/parser/grammar/: VLADLexer.py  VLADParser.py  VLADParserVisitor.py
libs/vlad-parser/tests/: test_grammar_factory.py  test_parser.py  test_token_matchers.py  test_translator.py
libs/vlad-sqlite/: .project-import-section.toml  .ruff.toml  README.md  pyproject.toml
libs/vlad-sqlite/src/vlad/sqlite/: sqlite.vlad
scripts/: build_sub_parser.sh
scripts/grammar/: VLADLexBasic.g4  VLADLexer.g4  VLADParser.g4
src/transformer_parser/: grammar_factory.py  parser.py  token_matchers.py  token_translator.py
src/transformer_parser/grammars/: postgres_select.py
src/vlad/parser/: grammar_factory.py
src/vlad_parser/: __init__.py  grammar_factory.py  parser.py  translator.py
src/vlad_parser/grammar/: VLADLexer.py  (+3 more)
tests/: test_grammar_factory.py  test_module1.py  test_parser.py  test_token_matchers.py  test_translator.py
(+7 files in other folders)
